--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>pl.MaidensDb.Main</mainClass>
+									<mainClass>pl.ASVidBuild.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
